# spyglass

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bls_config.toml  categories.toml  config.toml  pyproject.toml  zen_config.toml
src/spyglass/: __init__.py  __main__.py  _flamechart_template.html  analyze.py  beacon_api.py  build.py  categories.py  clean.py  cli.py  compare.py  config.py  constants.py  export.py  filters.py  flamechart.py  pr.py  progress.py  run.py
