[project]
name = "spyglass"
version = "0.1.0"
description = "CPU and memory profiling tool for Lighthouse"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"

[project.scripts]
spyglass = "spyglass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass"]
