[project]
name = "spyglass"
version = "0.1.0"
description = "CPU and memory profiling tool for Lighthouse"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"

[project.scripts]
spyglass = "spyglass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax)
    "B",    # bugbear (common pitfalls)
]
ignore = [
    "E501",   # line length (handled by formatter)
    "N802",   # function name should be lowercase (we have some like _HTML_TEMPLATE)
    "N806",   # variable in function should be lowercase (we have PHASE_ constants)
    "N815",   # mixedCase variable in class scope
]
